# raisindb

./: .gitignore  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  book.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-https.sh
crates/raisin-ai/: Cargo.toml  MODEL_DISCOVERY.md  README.md
crates/raisin-ai/examples/: list_models.rs
crates/raisin-ai/src/: crypto.rs  lib.rs  macros.rs  provider.rs  storage.rs  streaming.rs  tool_call_extraction.rs  utils.rs  validation.rs
crates/raisin-ai/tests/: blip_integration.rs  clip_integration.rs  moondream_integration.rs
crates/raisin-audit/: Cargo.toml  README.md
crates/raisin-audit/src/: lib.rs
crates/raisin-auth/: ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md
crates/raisin-auth/src/: lib.rs  registry.rs  strategy.rs
crates/raisin-binary/: Cargo.toml  README.md
crates/raisin-binary/src/: lib.rs
crates/raisin-binary/tests/: security_tests.rs
crates/raisin-core/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
crates/raisin-core/global_nodetypes/: raisin_acl_folder.yaml  raisin_actor.yaml  raisin_actor_task.yaml  raisin_agent.yaml  raisin_ai_actor.yaml  raisin_asset.yaml  raisin_auth_config.yaml  raisin_flow.yaml  raisin_flow_instance.yaml  raisin_flow_step_execution.yaml  raisin_folder.yaml  raisin_function.yaml  raisin_graph_algorithm_config.yaml  raisin_group.yaml  raisin_human_actor.yaml  raisin_identity.yaml  raisin_inbox_task.yaml  raisin_message.yaml  raisin_message_folder.yaml  raisin_node.yaml  raisin_notification.yaml  raisin_one_time_token.yaml  raisin_package.yaml  raisin_page.yaml  raisin_profile.yaml  raisin_profile_data.yaml  raisin_provider_config.yaml  raisin_repo_auth_config.yaml  raisin_role.yaml  raisin_security_config.yaml  raisin_session.yaml  raisin_trigger.yaml  raisin_user.yaml  raisin_workspace_access.yaml
crates/raisin-core/global_workspaces/: access_control.yaml  default.yaml  functions.yaml  packages.yaml  system.yaml
crates/raisin-core/src/: audit_adapter.rs  connection.rs  init.rs  lib.rs  nodetype_init.rs  package_init.rs  traits.rs  utils.rs  workspace_init.rs
crates/raisin-core/tests/: branch_isolation_tests.rs  indexed_validation_test.rs  multi_tenant_integration.rs  multi_tenant_integration.rs.disabled  node_service_integration.rs  phase4_tree_queries.rs  phase53_pagination.rs
crates/raisin-cypher-parser/: ARCHITECTURE.md  Cargo.toml  README.md
crates/raisin-cypher-parser/src/: error.rs  lib.rs  parser.rs
crates/raisin-cypher-parser/tests/: debug_path_test.rs  debug_test.rs  integration_tests.rs
crates/raisin-deps/: Cargo.toml  README.md
crates/raisin-deps/src/: checker.rs  flags.rs  lib.rs  state.rs
crates/raisin-embeddings/: Cargo.toml  README.md
crates/raisin-embeddings/src/: config.rs  crypto.rs  embedding_storage.rs  lib.rs  models.rs  provider.rs  storage.rs
crates/raisin-events/: Cargo.toml  README.md
crates/raisin-events/src/: bus.rs  lib.rs
crates/raisin-flow-runtime/: ANALYSIS_AND_PROPOSAL.md  Cargo.toml  README.md
crates/raisin-flow-runtime/src/: lib.rs  service.rs
crates/raisin-functions/: CONCEPT.md  Cargo.toml  README.md
crates/raisin-functions/src/: lib.rs
crates/raisin-graph-algorithms/: Cargo.toml  README.md
crates/raisin-graph-algorithms/src/: error.rs  lib.rs  projection.rs  writeback.rs
crates/raisin-hlc/: Cargo.toml  README.md
crates/raisin-hlc/benches/: hlc_bench.rs
crates/raisin-hlc/examples/: replication_demo.rs
crates/raisin-hlc/src/: error.rs  lib.rs  state.rs
crates/raisin-hlc/tests/: integration_tests.rs
crates/raisin-hnsw/: Cargo.toml  README.md
crates/raisin-hnsw/src/: excerpt.rs  index.rs  lib.rs  migration.rs  persistence.rs  types.rs
crates/raisin-indexer/: Cargo.toml  README.md
crates/raisin-indexer/src/: config.rs  event_handler.rs  lib.rs  management.rs  manager.rs  plugin.rs  property_index.rs  query.rs  worker.rs
crates/raisin-models/: Cargo.toml  README.md
crates/raisin-models/src/: admin_user.rs  api_key.rs  errors.rs  fractional_index.rs  lib.rs  operations.rs  registry.rs  timestamp.rs  tree.rs  workspace.rs
crates/raisin-packages/: Cargo.toml  README.md
crates/raisin-packages/src/: browser.rs  error.rs  exporter.rs  installer.rs  lib.rs  manifest.rs  namespace_encoding.rs  patcher.rs  sync.rs
crates/raisin-ratelimit/: Cargo.toml  README.md
crates/raisin-ratelimit/src/: lib.rs  rocks.rs
crates/raisin-rel/: ARCHITECTURE.md  Cargo.toml  README.md
crates/raisin-rel/src/: error.rs  lib.rs  value.rs
crates/raisin-replication/: ARCHITECTURE.md  COMPACTION.md  Cargo.toml  METRICS.md  README.md
crates/raisin-replication/benches/: README.md  replication_performance.rs  vector_clock_bench.rs
crates/raisin-replication/src/: config.rs  conflict_resolution.rs  crdt.rs  lib.rs  metrics.rs  metrics_reporter.rs  operation_decomposer.rs  operation_decomposer_metrics.rs  priority.rs  tcp_helpers.rs  value_conversion.rs  vector_clock.rs
crates/raisin-replication/tests/: PROPERTY_TESTS_README.md  catch_up_integration_test.rs  full_operation_msgpack_test.rs  integration_test.rs  msgpack_properties_test.rs  property_tests.proptest-regressions  property_tests.rs
crates/raisin-rocksdb/: Cargo.toml  README.md
crates/raisin-rocksdb/benches/: README.md  persistent_idempotency_bench.rs  rocksdb_benchmarks.rs
crates/raisin-rocksdb/docs/: ASYNC_OPERATION_QUEUE.md  MVCC_USAGE_EXAMPLES.md
crates/raisin-rocksdb/src/: constants.rs  error_ext.rs  lazy_indexing.rs  lib.rs  prefix_transform.rs
crates/raisin-server/: Cargo.toml  README.md  build.rs
crates/raisin-sql/: Cargo.toml  README.md
crates/raisin-sql-execution/: Cargo.toml  README.md
crates/raisin-sql/src/: lib.rs  (+1 more)
crates/raisin-storage/: Cargo.toml  README.md
crates/raisin-storage-memory/: Cargo.toml  README.md
crates/raisin-transport-http/: ARCHITECTURE.md  Cargo.toml  README.md
crates/raisin-transport-inprocess/: Cargo.toml  README.md
crates/raisin-transport-pgwire/: ARCHITECTURE.md  Cargo.toml  README.md
(+3125 files in other folders)
