[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "crates/.data",
    "crates/.claude",
    "examples/*",
    "tooling/*"
]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["preserve_order"] }
serde_with = {version = "3.11.0", features = ["macros"]}
nanoid = "0.4.0"
validator = { version = "0.20.0", features = ["derive"] }
schemars = {version = "0.9.0", features = ["chrono04", "rust_decimal1"]}
chrono = { version = "0.4", features = ["serde", "clock", "std"] }
regex = "1.11.0"
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
thiserror = "2.0.3"
anyhow = "1.0.75"
tempfile = "3.8"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rust-embed = "8.0"
mime_guess = "2.0"
base64 = "0.22"
hex = "0.4"
blake3 = "1.8"
rmp-serde = "1.3.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
ts-rs = { version = "10.1", features = ["serde-compat"] }
futures = "0.3"
rust_decimal = { version = "1.36", features = ["serde-str", "maths"] }
url = "2.5"
matchit = "0.8"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# Geospatial
geo = "0.32"
geojson = { version = "0.24", features = ["geo-types"] }
geohash = "0.13.1"
