[package]
name = "raisin-binary"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nanoid = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio","rustls"], optional = true }
tokio = { workspace = true }
http-body-util = { version = "0.1", optional = true }
aws-smithy-types = { version = "1", optional = true }

[features]
default = ["fs"]
fs = []
s3 = ["dep:aws-sdk-s3", "dep:http-body-util", "dep:aws-smithy-types"]

[dev-dependencies]
tempfile.workspace = true
