[package]
name = "raisin-embeddings"
version = "0.1.0"
edition = "2021"
description = "Vector embeddings support for RaisinDB"
license = "BSL-1.1"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rmp-serde = { workspace = true }
tracing = "0.1"
ring = "0.17"
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
raisin-error = { path = "../raisin-error" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true, features = ["sync", "time"] }
raisin-hlc = { version = "0.1.0", path = "../raisin-hlc" }
raisin-ai = { version = "0.1.0", path = "../raisin-ai" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
