[package]
name = "raisin-hnsw"
version = "0.1.0"
edition = "2021"
description = "HNSW vector search engine for RaisinDB with Moka LRU cache"
license = "BSL-1.1"

[lib]
path = "src/lib.rs"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = "0.1"
raisin-error = { path = "../raisin-error" }

# HNSW implementation
usearch = "2"

# Cache
moka = { version = "0.12", features = ["sync"] }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# File operations
bincode = "1.3"
raisin-hlc = { version = "0.1.0", path = "../raisin-hlc" }

[dev-dependencies]
tempfile = { workspace = true }
rand = "0.8"
