[package]
name = "raisin-models"
version = "0.1.0"
edition = "2021"
description = "Core data models and type definitions for RaisinDB"
license = "BSL-1.1"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
schemars = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
lazy_static = { workspace = true }
nanoid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
raisin-error = { version = "0.1.0", path = "../raisin-error" }
rmpv = "1.3.0"
raisin-hlc = { version = "0.1.0", path = "../raisin-hlc" }
rust_decimal = { workspace = true }
url = { workspace = true }
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true }
serde_yaml = "0.9.34"
rmp-serde = { workspace = true }
