[package]
name = "raisin-rel"
version = "0.1.0"
edition = "2021"
description = "Raisin Expression Language (REL) - parser and evaluator for conditional expressions"
license = "MIT"

[dependencies]
nom = "8.0.0"
nom_locate = "5.0"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
