[package]
name = "raisin-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = { version = "0.59.0", features = ["serde", "visitor"] }
nom = "8.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = "0.7"
thiserror = { workspace = true }
indexmap = { version = "2.2", features = ["serde"] }
chrono = { workspace = true }
tracing = { workspace = true }

# RaisinDB crates (WASM-compatible)
raisin-error = { path = "../raisin-error" }
raisin-cypher-parser = { path = "../raisin-cypher-parser" }
raisin-hlc = { path = "../raisin-hlc" }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
proptest = "1.0"
# raisin-storage-memory is not currently up to date with Storage trait
# Integration tests will use raisin-rocksdb instead

[features]
default = []
# WASM support - this crate is WASM-compatible
wasm = ["sqlparser/serde"]
# TypeScript type generation via ts-rs
ts-export = ["ts-rs"]
