[package]
name = "raisin-storage"
version = "0.1.0"
edition = "2021"
description = "Storage trait definitions for RaisinDB"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
raisin-hlc = { version = "0.1.0", path = "../raisin-hlc" }
serde = { workspace = true }
chrono = { workspace = true }
raisin-error = { path = "../raisin-error" }
raisin-models = { path = "../raisin-models" }
raisin-context = { version = "0.1.0", path = "../raisin-context" }
raisin-ai = { version = "0.1.0", path = "../raisin-ai" }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.89"
log = "0.4.28"
nanoid.workspace = true
once_cell = "1.17"
tokio-util = "0.7"
serde_json.workspace = true
raisin-events = { version = "0.1.0", path = "../raisin-events" }
futures = { workspace = true }
dashmap = "5"
