[package]
name = "raisin-transport-http"
version = "0.1.0"
edition = "2021"
description = "Axum-based HTTP transport for RaisinDB"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true, features = ["macros", "ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mime_guess = "2"
multer = "2"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
tokio-stream = "0.1"
async-stream = "0.3"
raisin-storage = { path = "../raisin-storage" }
raisin-sql-execution = { path = "../raisin-sql-execution", optional = true }
raisin-storage-memory = { path = "../raisin-storage-memory", optional = true }
# Optional RocksDB backend
raisin-rocksdb = { path = "../raisin-rocksdb", optional = true }
raisin-indexer = { path = "../raisin-indexer", optional = true }
raisin-hnsw = { path = "../raisin-hnsw", optional = true }
# Future backends (placeholders):
# raisin-storage-mongo = { path = "../raisin-storage-mongo", optional = true }
raisin-core = { path = "../raisin-core" }
raisin-context = { path = "../raisin-context" }
raisin-error = { path = "../raisin-error" }
raisin-models = { path = "../raisin-models" }
raisin-query = { path = "../raisin-query" }
raisin-binary = { path = "../raisin-binary" }
raisin-audit = { path = "../raisin-audit" }
raisin-embeddings = { path = "../raisin-embeddings" }
nanoid = { workspace = true }
percent-encoding = "2.3.2"
urlencoding = "2.1"
serde_yaml = "0.9.34"
tracing = "0.1.41"
chrono = { workspace = true }
validator = { workspace = true, features = ["derive"] }
serde_urlencoded = "0.7.1"
axum-extra = { version = "0.10", features = ["typed-header"] }
regex.workspace = true
hex.workspace = true
rocksdb = { version = "0.24.0", optional = true }
raisin-replication = { version = "0.1.0", path = "../raisin-replication", optional = true }
tokio-tungstenite = "0.28.0"
raisin-hlc = { version = "0.1.0", path = "../raisin-hlc" }
reqwest = { workspace = true, features = ["json"] }
raisin-functions = { path = "../raisin-functions" }
matchit = { workspace = true }
zip = { workspace = true }
raisin-ai = { version = "0.1.0", path = "../raisin-ai" }
raisin-packages = { path = "../raisin-packages" }
raisin-auth = { path = "../raisin-auth", optional = true }
uuid = { workspace = true }
raisin-flow-runtime = { path = "../raisin-flow-runtime", optional = true }
http-body-util = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0"
once_cell = "1.21.3"

[dev-dependencies]
tower = "0.5"
tempfile = "3.8"
rocksdb = "0.24.0"

[features]
default = ["fs", "storage-rocksdb"]
fs = []
s3 = ["raisin-binary/s3"]
store-memory = ["dep:raisin-storage-memory"]
store-mongo = []
storage-rocksdb = ["dep:raisin-rocksdb", "dep:raisin-indexer", "dep:raisin-hnsw", "dep:raisin-sql-execution", "dep:rocksdb", "dep:raisin-replication", "dep:raisin-flow-runtime", "dep:raisin-auth"]
